# ISB_2

projects/transmission-lines/: README.md  pyproject.toml
projects/transmission-lines/src/data/: Task1.py  code1.py
projects/women-mnrega/: README.md  pyproject.toml
projects/women-mnrega/src/data/: Task2.py
