[tool.poetry]
name = "Women-Mnrega"
version = "0.1.0"
description = "This project is regarding the women benificiaries under Mahatma Gandhi National Rural Employment Guarantee Act 2005 or MGNREGA, the folder is sub divided into various sub folders for each year in which there are csv's giving us infiormation for benificiaries state , district , block , tootla no of accounts etc."
authors = ["Dhruv Talan"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
